[package]
name = "learn-rust-tool-chapter-12"
version = "0.1.0"
authors = ["epilif3sotnas"]
edition = "2021"
description = "Learn Rust with Rust book - tool from chapter 12."
readme = "README.md"
repository = "https://github.com/epilif3sotnas/learn-rust-tool-chapter-12"
license = "Apache-2.0"
keywords = ["learning", "Rust", "Book", "CLI"]
publish = false


[[bin]]
name = "learn-rust-tool-chapter-12"
path = "src/main.rs"